--- a/Django/mysite/contests/templates/contests/contest_list.html
+++ b/Django/mysite/contests/templates/contests/contest_list.html
@@ -1,15 +1,53 @@
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mini Project 4</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'polls:index' %}">Polls</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <link rel="stylesheet" href="{% static 'contests/style.css' %}">
 
-{% if latest_contest_list %}
-    <ul>
-    {% for contest in latest_contest_list %}
-    <li><a href="{% url 'contest_signup' contest.id %}">{{ contest.contest_name }}</a></li>
-    <p>{{ contest.contest_description }}</p>
+<div class="container py-5">
+    <div class="text-center mb-5">
+        <h1 class="display-5 text-primary fw-bold">Available Contests</h1>
+        <p class="text-muted">Click a contest to enter</p>
+    </div>
 
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No contests are available.</p>
-{% endif %}
+    {% if latest_contest_list %}
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            {% for contest in latest_contest_list %}
+                <div class="col">
+                    <a href="{% url 'contest_signup' contest.id %}" class="text-decoration-none text-dark">
+                        <div class="card h-100 border-primary shadow-sm hover-shadow transition">
+                            <div class="card-body">
+                                <h5 class="card-title text-primary">{{ contest.contest_name }}</h5>
+                                <p class="card-text">{{ contest.contest_description }}</p>
+                            </div>
+                            <div class="card-footer bg-primary text-white text-center">
+                                Click to enter
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <div class="alert alert-info text-center" role="alert">
+            No contests are available at this time.
+        </div>
+    {% endif %}
+</div>
