--- a/Django/mysite/contests/templates/contests/contest_signup.html
+++ b/Django/mysite/contests/templates/contests/contest_signup.html
@@ -1,12 +1,49 @@
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mini Project 4</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'polls:index' %}">Polls</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <link rel="stylesheet" href="{% static 'contests/style.css' %}">
 
-<h2>Sign up for "{{ contest.contest_name }}"</h2>
-<p>{{ contest.contest_description }}</p>
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+            <div class="card shadow border-primary">
+                <div class="card-header bg-primary text-white text-center">
+                    <h3 class="mb-0">Sign up for "{{ contest.contest_name }}"</h3>
+                </div>
+                <div class="card-body">
+                    <p class="text-muted">{{ contest.contest_description }}</p>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+                    <form method="post">
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+                        <div class="text-center mt-4">
+                            <button type="submit" class="btn btn-primary px-4">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="text-center mt-4">
+                <a href="{% url 'contest_list' %}" class="btn btn-outline-secondary">← Back to Contests</a>
+            </div>
+        </div>
+    </div>
+</div>
