--- a/Django/mysite/polls/templates/polls/detail.html
+++ b/Django/mysite/polls/templates/polls/detail.html
@@ -1,12 +1,48 @@
-<form action="{% url 'polls:vote' question.id %}" method="post">
-    {% csrf_token %}
-    <fieldset>
-        <legend><h1>{{ question.question_text }}</h1></legend>
-        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mini Project 4</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'polls:index' %}">Polls</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="bg-primary text-white p-5 rounded shadow w-100" style="max-width: 600px;">
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+      {% csrf_token %}
+      <fieldset class="mb-4">
+        <legend><h2 class="mb-4">{{ question.question_text }}</h2></legend>
+
+        {% if error_message %}
+          <div class="alert alert-warning">{{ error_message }}</div>
+        {% endif %}
+
         {% for choice in question.choice_set.all %}
-            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+          <div class="form-check text-start">
+            <input class="form-check-input" type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label class="form-check-label" for="choice{{ forloop.counter }}">
+              {{ choice.choice_text }}
+            </label>
+          </div>
         {% endfor %}
-    </fieldset>
-    <input type="submit" value="Vote">
+      </fieldset>
+
+      <button type="submit" class="btn btn-light mt-3">Vote</button>
     </form>
+  </div>
+</div>
