--- a/Django/mysite/polls/templates/polls/index.html
+++ b/Django/mysite/polls/templates/polls/index.html
@@ -1,13 +1,40 @@
 {% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mini Project 4</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'polls:index' %}">Polls</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="bg-primary text-white p-5 rounded shadow text-center w-100" style="max-width: 600px;">
+    <h1 class="mb-4">Available Polls</h1>
+
+    {% if latest_question_list %}
+      <ul class="list-group">
+        {% for question in latest_question_list %}
+          <li class="list-group-item list-group-item-light">
+            <a href="{% url 'polls:detail' question.id %}" class="text-decoration-none">{{ question.question_text }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p class="mt-4">No polls are available.</p>
+    {% endif %}
+  </div>
+</div>
