--- a/Django/mysite/polls/templates/polls/results.html
+++ b/Django/mysite/polls/templates/polls/results.html
@@ -1,9 +1,40 @@
-<h1>{{ question.question_text }}</h1>
+{% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mini Project 4</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'polls:index' %}">Polls</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="bg-success text-white p-5 rounded shadow w-100" style="max-width: 600px;">
+    <h1 class="mb-5">Results</h1>
+    <h2 class="mb-4">Question: {{ question.question_text }}</h2>
+
+    <ul class="list-group mb-4">
+      {% for choice in question.choice_set.all %}
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <span>{{ choice.choice_text }}</span>
+          <span class="badge bg-primary rounded-pill">{{ choice.votes }} vote{{ choice.votes|pluralize }}</span>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <a href="{% url 'polls:detail' question.id %}" class="btn btn-light">Vote again?</a>
+  </div>
+</div>
